# api/controllers/user.js
@@ -10,7 +10,9 @@ module.exports = {
   handleLogin,
   addUser,
   getUsers,
-  getUserInfo
+  getUserInfo,
+  updateUser,
+  deleteUser
 };
 
 
@@ -38,12 +40,52 @@ async function handleLogin(req, res) {
       }  
     } catch(errorResponse) {
       return res.status(errorResponse.statusCode).send(errorResponse.message)
-    }}
+  }}
   
   
-    async function addUser(req, res) {
-      try {
-        var response = await userHelper.addUser(req, res)
+async function addUser(req, res) {
+  try {
+    var response = await userHelper.addUser(req, res)
+    if(response){          
+      return res.status(response.statusCode).send(response.message)
+    }     
+} catch(err) {      
+  let errorResponse = global.post.errorResponse
+  errorResponse.message = err
+  return res.status(errorResponse.statusCode).send(errorResponse.message)
+}
+}
+    
+
+async function getUsers(req, res) {
+  try {
+      var response = await userHelper.getUsers(req, res)
+      if(response){          
+        return res.status(response.statusCode).send(response.data)
+      }     
+  } catch(err) {      
+    return res.status(err.statusCode).send(err.message)
+  }
+}
+
+async function updateUser(req, res) {
+  try {
+    let userData =  req.body
+    if(userData !== undefined){
+      var response = await userHelper.putEntityData(req, res)
+      if(response){          
+        return res.status(response.statusCode).send(response.message)
+      }     
+  }} catch(errorResponse) {      
+    let error ={
+      message : errorResponse.message
+    }
+    return res.status(errorResponse.statusCode).send(error)
+  }}
+
+  async function deleteUser(req, res) {
+    try {
+        var response = await userHelper.deleteUser(req, res)
         if(response){          
           return res.status(response.statusCode).send(response.message)
         }     
@@ -52,16 +94,7 @@ async function handleLogin(req, res) {
       errorResponse.message = err
       return res.status(errorResponse.statusCode).send(errorResponse.message)
     }
-    }
-    
+  }
 
-    async function getUsers(req, res) {
-      try {
-          var response = await userHelper.getUsers(req, res)
-          if(response){          
-            return res.status(response.statusCode).send(response.data)
-          }     
-      } catch(err) {      
-        return res.status(err.statusCode).send(err.message)
-      }
-    }
+
+  
